batch_out.out
cpu-bind=MASK - clus11, task  0  0 [43547]: mask 0xfff set
kmeans.c: En la función ‘kmeans’:
kmeans.c:124:27: error: invalid operator for ‘#pragma omp atomic’ before ‘||’ token
     condition = condition || changed;
                           ^
./kmeans: /soft/gcc-10.2.0/lib64/libgomp.so.1: no version information available (required by ./kmeans)
./kmeans: /soft/gcc-10.2.0/lib64/libgomp.so.1: no version information available (required by ./kmeans)
TEST = 1

WIDTH : 3840
HEIGHT: 2160
LENGHT: 8294400

STEP 1: K = 6
STEP 2: Init centroids
STEP 3: Updating centroids

Number of K-Means iterations: 31

Centroide 0 : R[71]	G[60]	B[49]
Centroide 1 : R[222]	G[219]	B[207]
Centroide 2 : R[113]	G[112]	B[101]
Centroide 3 : R[30]	G[24]	B[20]
Centroide 4 : R[176]	G[163]	B[145]
Centroide 5 : R[146]	G[97]	B[57]

Time to Kmeans is 5 seconds and 787649 microseconds
Checksum value = 16532316

 Performance counter stats for './kmeans test 6 imagen.bmp':

      46712,344091      task-clock (msec)         #    7,516 CPUs utilized          
             1.804      context-switches          #    0,039 K/sec                  
               176      cpu-migrations            #    0,004 K/sec                  
            25.175      page-faults               #    0,539 K/sec                  
   121.089.198.715      cycles                    #    2,592 GHz                      (50,00%)
     1.477.318.125      stalled-cycles-frontend   #    1,22% frontend cycles idle     (50,01%)
    55.210.740.818      stalled-cycles-backend    #  45,60% backend cycles idle       (50,01%)
   168.820.589.823      instructions              #    1,39  insn per cycle         
                                                  #    0,33  stalled cycles per insn  (50,02%)
     6.064.735.759      branches                  #  129,832 M/sec                    (50,00%)
        63.281.030      branch-misses             #    1,04% of all branches          (50,01%)

       6,214726498 seconds time elapsed

